Still need to fix overlap issue with map

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -151,7 +151,7 @@ textarea {
 
 #map-container {
   margin: auto;
-  /*position: static;*/
+  position: static;
   top: 0;
   /*transform: inherit !important;*/
   width: 60%;
